Replace deprecated URL(string) constructor with URI(string).toURL()